--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,70 +1,73 @@
 .sidenav-container {
+    height: 100%;
+  }
+  
+  .sidenav {
+    width: 200px;
+  }
+  
+  .sidenav .mat-toolbar {
+    background: inherit;
+  }
+  
+  .mat-toolbar.mat-primary {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+  }
+  span>a{
+    color: white;
+  
+  }
 
+  /* pie charts */
+ 
+  
+  /* --------------------------------------------------big screen--------------------------------------------------------------- */
+  @media only screen and (min-width: 961px) {
    
- }
- 
- .sidenav {
-   width: 200px;
- }
- 
- .sidenav .mat-toolbar {
-   background: inherit;
- }
- 
- .mat-toolbar.mat-primary {
-   position: sticky;
-   top: 0;
-   z-index: 1;
- }
- span>a{
-   color: white;
- 
- }
- 
- /* --------------------------------------------------big screen--------------------------------------------------------------- */
- @media only screen and (min-width: 961px) {
-  
-   .ul2 {
-    background-color: rgb(54, 51, 51);
-    box-shadow: 1px 1px 1px 1px lightskyblue;
-   
+    .ul2 {
+     background-color:rgb(17, 16, 14);
 
-   }
-#user{
-  position: relative;
-  left: 1160px;
-}
+    }
+    #userdropdown{
+        position: relative;
+      left: 300px;
+      border: 1px solid whitesmoke;
+      border-radius: 20px;
+      box-shadow: 2px 3px rgb(39, 38, 38);
+      background-color: rgb(63,81,181);
 
+    }
   
+  .nav-items{
+    position: relative;
+    left: 950px;
+  }
+  #search{
+    margin-right: 30px;
+    margin-top:10px ;
+    display: flex;
+    position: absolute;
+    top: 4px;
+    left: 350px;
+    right: 300px;
+  }
   
+  }
+  /* --------------------------------------------------small screen--------------------------------------------------------------- */
+  @media only screen and (max-width: 576px) {
+    #search{
+      display: none;
+    }
+    #logo{
+      display: none;
+    }
+    #userdropdown{
+        position: relative;
+      left: 250px;
+      border: 1px solid whitesmoke;
+      border-radius: 20px;
 
- 
- 
- .nav-items{
-   position: relative;
-   left: 950px;
- }
- #search{
-   margin-right: 30px;
-   margin-top:10px ;
-   display: flex;
-   position: absolute;
-   top: 4px;
-   left: 350px;
-   right: 300px;
- }
- 
- 
- 
- 
- }
- 
- /* --------------------------------------------------small screen--------------------------------------------------------------- */
- @media only screen and (max-width: 576px) {
-   #search{
-     display: none;
-   }
-   #logo{
-     display: none;
-   }
-   }
+    }
+    }
