--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,184 +1,3 @@
-<!-- -------------------------------------- navbar--------------------------------
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" ><img src="https://1.bp.blogspot.com/-NHu6P0q7uI0/YARCYHVZ3CI/AAAAAAAAAWg/wduKitAeOG0lM76zL5p342Gsbf7O1D5WQCLcBGAsYHQ/s800/neofinance-logo.png" alt="" width="120px" height="80px"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse " id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0 " id="navbar">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="">About</a>
-          </li>
-         
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Features
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" routerLink="">Generate My Report</a></li>
-              <li><a class="dropdown-item" routerLink="">See Market Trends</a></li>
-              
-              <li><a class="dropdown-item" routerLink="">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="registerLogin">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="addCads">addCards</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="myprofile">myprofile</a>
-          </li>
-         
-        </ul>
-       
-      </div>
-    </div>
-  </nav>
-
-
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <img src="https://cdn.corporatefinanceinstitute.com/assets/how-do-banks-make-money.jpeg" class="img-fluid one ">
-      </div>     
-    </div>
-  </div>
-
-  <div class="container-fluid d-flex justify-content-center">
-    <div class="row">
-      <h3 class="text-black">Set up a budget quickly and easily and match it to your pay cycle. We’ll track your progress, so you'll always be on top of your finances.<br>
-
-        ⬤	Budgeting has never been easier with the ability to set your payday or pick a date to start your budget.<br>
-        ⬤	Set budgets by category and track where and how you're spending your money.</h3>
-    </div>
-  </div>
-  <br>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-3">
-        <div class="card">
-          <div class="card-header report">
-            <img src="https://thirdspacelearning.com/wp-content/uploads/2023/07/Pie-Chart-image-10-US-1.png" height="200" width="300">
-          </div>
-            <div class="card-body">
-              <h1 class="card-title">GET REPORTS</h1>
-            </div>
-            <div clas="card-footer">
-              <p>Your money in your hands
-                Wouldn’t it be good not to have to worry about money? Well, 
-                it’s possible! mymo is like your personal financial assistant,
-                 with loads of handy features to keep you on track</p>
-            </div>
-        
-        </div>
-      </div>
-      <div class="col-md-3 d-flex ">
-        <div class="card">
-          <div class="card-header report">
-            <img src="https://st3.depositphotos.com/1006009/17251/i/450/depositphotos_172512152-stock-photo-set-limits-productivity-advice-on.jpg" height="200" width="300">
-          </div>
-            <div class="card-body">
-              <h1 class="card-title">SET LIMITS</h1>
-            </div>
-            <div clas="card-footer">
-              <p>If you've got a goal in mind or just want to put some money aside
-                 for a  day, we offer competitive interest rates for a range of savings accounts.
-                  an account you can open online or just a place to keep money safe
-               .</p>
-            </div>
-         
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card">
-          <div class="card-header report">
-            <img src="https://media.licdn.com/dms/image/D4D12AQFMqb6RqX4B9A/article-cover_image-shrink_600_2000/0/1688574248073?e=2147483647&v=beta&t=V8lSBHRBv1mt6Xxe974x9YXJddUZTdfOtFYHlrfuwJ4" height="200" width="300">
-          </div>
-            <div class="card-body">
-              <h1 class="card-title">TRENDS</h1>
-            </div>
-            <div clas="card-footer">
-              <p>Keeping up with the latest marketing trends isn’t always easy. But, to succeed in the fast-paced marketing world — and maintain a sense of relevance with your audience — it's vital to stay ahead of them..</p>
-            </div>
-         
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card">
-          <div class="card-header report">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyJFVjuoQx54sGJHb2wATZMg45Y2v9PPHE3Q&usqp=CAU" height="200" width="300">
-          </div>
-            <div class="card-body">
-              <h1 class="card-title">OFFERS</h1>
-            </div>
-            <div clas="card-footer">
-              <p> any free product, service, or content given to a website visitor in exchange for them performing a specific actionhelp prospects overcome any resistance to purchasing your product or service</p>
-            </div>
-         
-        </div>
-      </div>
-    </div>
-  </div>
-<br>
-<div class="container-fluid">
-  <div class="row">
-   <div class="col-md-1"></div>
-    <div class="col-md-5">
-      <p class="box"><br>Welcome to NEO-FINANCE, where financial control meets effortless convenience. Take charge of your finances with
-         our innovative platform that empowers you to set personalized limits, access exclusive offers, and gain insightful reports and trend
-         analyses—all in one place. Our user-friendly interface ensures a seamless experience, whether you're managing budgets, exploring
-          enticing offers, or delving into detailed financial trends. Backed by robust security measures, your financial information is in
-           safe hands. Join a community of savvy users who trust us for our reliability and cutting-edge features. Discover a new era in
-            financial management—simple, secure, and tailored to your needs. Sign up now to experience a smarter way to navigate your financial
-             journey with NEO_FINANCE.</p>
-    </div>
-    <div class="col-md-3">
-      <img src="" class="img-fluid">
-    </div>
-    
-  </div>
-</div>
-
-<div class="comtainer-fluid">
-  <div class="row">
-    <div class="col-md-1"></div>
-    <div class="col-md-3">
-      <h3>Features</h3>
-      <a routerLink=""><i class="fa-solid fa-angle-right">Set Limits</i></a>
-      <a routerLink=""><i class="fa-solid fa-angle-right">Report</i></a>
-      <a routerLink=""><i class="fa-solid fa-angle-right">Trends</i></a>
-      <a routerLink=""><i class="fa-solid fa-angle-right">Set Limit</i></a>
-    </div>
-  </div>
-</div>
-
-
-
-
-
- -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav
     #drawer
@@ -190,11 +9,21 @@
   >
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item [routerLink]="['home']"> <i class="fa-sharp fa-solid fa-house me-1"></i> Home </a>
-      <a mat-list-item [routerLink]="['contact']"><i class="fa-solid fa-address-card me-1"></i>Contact</a>
-      <a mat-list-item [routerLink]="['about']"><i class="fa-solid fa-id-badge me-2"></i> About</a>
-      <a mat-list-item [routerLink]="['card']"><i class="fa-solid fa-id-badge me-2"></i> Card</a>
-      <a mat-list-item [routerLink]="['add-cards']"><i class="fa-solid fa-id-badge me-2"></i> Add Cards</a>
+      <a mat-list-item [routerLink]="['home']">
+        <i class="fa-sharp fa-solid fa-house me-1"></i> Home
+      </a>
+      <a mat-list-item [routerLink]="['#']"
+        ><i class="fa-brands fa-stack-overflow me-2"></i>Set Limits</a
+      >
+      <a mat-list-item [routerLink]="['offers']"
+        ><i class="fa-solid fa-gifts me-2"></i>Offers</a
+      >
+      <a mat-list-item [routerLink]="['addcards']"
+        ><i class="fa-regular fa-credit-card me-1"></i> Add Cards</a
+      >
+      <a mat-list-item [routerLink]="['#']"
+        ><i class="fa-solid fa-file-invoice me-2"></i>Upload Bills
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -209,71 +38,74 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       }
-        
-      
-
-         <!----------------------- Logo-------------------------------------- -->
+      <div>
+        <!----------------------- Logo-------------------------------------- -->
         <a routerLink="#" class="position-absolute top-0"
-        ><img
-          id="logo"
-          src="https://s3-eu-central-1.amazonaws.com/tribe-prod-platform-images/17_21_neofinance1.png"
-          class="position-absolute top-1 start-10"
-          alt=""
-          height="60px" width="100px"
-      
-      /></a>
-      
-      
-  
-    <!-- ------------------------Search Box-------------------------------- -->
-      
-     
+          ><img
+            id="logo"
+            src="assets\log1.png"
+            class="position-absolute top-1 start-10"
+            alt=""
+            height="60px"
+            width="100px"
+        /></a>
+        <!-- ------------------------Search Box-------------------------------- -->
+
         <form class="  " id="search">
           <input type="search" class="form-control me-3" placeholder="search" />
           <button class="btn btn-outline-danger">Search</button>
         </form>
-    
-    
-           <!-- ------------------------------------------User------------------------------------------ -->
-           <span class="dropdown " id="user">
-            <a  class="btn text-decoration-none dropdown-toggle  me-2" data-bs-toggle="dropdown"
-              ><i class="fa-solid fa-user me-2" ></i>My profile</a> 
-           
-              <ul class="dropdown-menu ul2" >
-                <li class="dropdown-item"><a  class="text-decoration-none text-info prof" > My Profile</a></li>
-                <li class="dropdown-item"><a routerLink="#" class="text-decoration-none text-info" >Logout</a></li>
-    
-              </ul>
-          
-          </span>
-     
-      
-
-
-
-
-
-      <div>
-
-          
-       
-
-      
       </div>
 
-      <div>
+      <!-- ------------------------------------------User------------------------------------------ -->
+      <div class="nav-items">
+        <div class="dropdown">
+          <button
+            class="btn btn-secondary"
+            type="button"
+            id="userdropdown"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            <i class="fa-solid fa-user"></i>
+          </button>
+          <ul class="dropdown-menu ul2" aria-labelledby="userdropdown">
+            <li class="dropdown-item">
+              <a class="text-decoration-none text-info" routerLink="#">
+                My Details</a
+              >
+            </li>
+            <li class="dropdown-item">
+              <a class="text-decoration-none text-info" routerLink="#">
+                MY Cards
+              </a>
+            </li>
+            <li class="dropdown-item">
+              <a routerLink="#" class="text-decoration-none text-info"
+                >Logout</a
+              >
+            </li>
+          </ul>
         </div>
-        
-              
-    
-  </mat-toolbar>
-  
-  <!-- Add Content Here -->
-</mat-sidenav-content>
+      </div>
+    </mat-toolbar>
+    <router-outlet></router-outlet>
+    <!-- Add Content Here -->
+  </mat-sidenav-content>
 </mat-sidenav-container>
 
+<!---------------------------------------------------------- pie chart------------------------------------------------------------ -->
 
-<router-outlet></router-outlet>
+<div>
+  <div *ngIf="isHandset$ | async">Handset View</div>
+  <div *ngIf="!(isHandset$ | async)">Desktop View</div>
+</div>
 
-
-  
+<div style="width: 100%; max-width: 600px;">
+  <ng-apexcharts #chart
+                [series]="chartOptions.series"
+                [chart]="chartOptions.chart"
+                [labels]="chartOptions.labels"
+                [responsive]="chartOptions.responsive">
+  </ng-apexcharts>
+</div>
