--- a/src/app/register-and-login/register-and-login.component.html
+++ b/src/app/register-and-login/register-and-login.component.html
@@ -1,99 +1,148 @@
-
 <body>
-	<div class="main">  	
-		<input type="checkbox" id="chk" aria-hidden="true">
+ <a routerLink="/"> <i class="fa-solid fa-arrow-left " id="leftArrow"></i></a> 
+ 
+  <img src="assets\log1.png" alt="sdfg" id="logo" />
+  <p class="p">
+    Welcome to Neo Finance, your gateway to transparent and empowering 
+    peer-to-peer lending. Signing up is quick and easy, giving you access to a
+    
+    world of financial opportunities... <br> <br>
+    Fill in the required information to create your Neo Finance account.  We
+    prioritize your security, so rest assured that your details are protected...
+    
+  </p>
 
-			<div class="signup" id="inputs">
-				<form  action="" ngNativeValidate #form>
-					<label for="chk" aria-hidden="true">Sign up</label>
-                   <div class="inputs2">
-					<!-- <input type="text" name="txt" placeholder="User name" required=""> -->
-                     <!------------- UserName----------- -->
-                     <div class=" d-flex justify-content-center">
-                    <div class="form-group mt-4">
-                        <mat-form-field class="example-full-width">
-                          <mat-label><i class="fa-solid fa-user text-dark me-2"></i>UserName </mat-label>
-                          <input matInput placeholder="Ex. Sankar" name="UserName"  [(ngModel)]="runame1" required="">
-                        </mat-form-field>
-                      </div>
-                    </div>
-                      
-                        <!------------- Email----------- -->
-                        <!-- <input type="email" name="email" placeholder="Email" required=""> -->
-                        <div class=" d-flex justify-content-center">
-            <div class="form-group">
-                <mat-form-field class="example-full-width">
-                  <mat-label><i class="fa-solid fa-envelope text-dark me-2"></i>Email</mat-label>
-                  <input matInput type="email" placeholder="Ex. sankar@gmail.com" name="email" [(ngModel)]="remail1" required="">
-                </mat-form-field>
-              </div>
-            </div>
-    
-			   <!------------- Password----------- -->
-               <!-- <input type="password" name="pswd" placeholder="Password" required=""> -->
-               <div class=" d-flex justify-content-center">
-               <div class="form-group ">
-                <mat-form-field class="example-full-width">
-                  <mat-label><i class="fa-solid fa-key text-dark me-2"></i>Password</mat-label>
-                  <input matInput type="password" placeholder="Ex. Sankar1234" name="pw1" [(ngModel)]="rpassword1" required="">
-                </mat-form-field>
-            </div>
-        </div>
-            <div class=" d-flex justify-content-center">
-                <mat-form-field class="example-full-width">
-                  <mat-label><i class="fa-solid fa-key text-dark me-2"></i>Re Enter Password</mat-label>
-                  <input matInput type="password"   placeholder="Ex. Sankar1234" name="pw1" [(ngModel)]="rpassword2" required="">
-                </mat-form-field>
-            </div>
-        
-    
-             
-              <div class=" d-flex justify-content-center">
-              <!-- <button>Sign up</button> -->
-              <div class="from-group  ">
+  <div class="main">
   
-                <div *ngIf="rpassword1!=rpassword2" >  
-                  <label for="" class="text-white bg-danger rounded " id="MisMatch"> Password MisMatched</label>
-                </div>
-    
-                <div *ngIf="rpassword1==rpassword2 ">
-                <button mat-raised-button  class="bg-primary text-white"  type="submit" (click)=" form.checkValidity()? submit() : null" id="btn1" >Submit</button>
-                <!-- <button mat-raised-button color="warn" id="btn2">Cancle</button> -->
-              </div>  
-              </div>
-            </div>
-        </div>
-          
-				
-				</form>
-                
-			</div>
+    <input type="checkbox" id="chk" aria-hidden="true" />
 
-			<div class="login">
-				<form>
-					<label for="chk" aria-hidden="true">Login</label>
-                       <!------------- UserName----------- -->
-                    <div class=" d-flex justify-content-center">
-                        <div class="form-group mt-4">
-                            <mat-form-field class="example-full-width">
-                              <mat-label><i class="fa-solid fa-user text-dark me-2"></i>UserName</mat-label>
-                              <input matInput placeholder="Ex. Sankar" name="UserName"  [(ngModel)]="Uname" required="">
-                            </mat-form-field>
-                          </div>
-                        </div>
-                        	   <!------------- Password----------- -->
-                        <div class=" d-flex justify-content-center">
-                            <div class="form-group ">
-                             <mat-form-field class="example-full-width">
-                               <mat-label><i class="fa-solid fa-key text-dark me-2"></i>Password</mat-label>
-                               <input matInput type="password" placeholder="Ex. Sankar1234" name="pw1" [(ngModel)]="password" required="">
-                             </mat-form-field>
-                         </div>
-                     </div>
-					
-					<!-- <input type="password" name="pswd" placeholder="Password" required=""> -->
-					<button class="button" (click)="Login()">Login</button>
-				</form>
-			</div>
-	</div>
+    <div class="signup">
+      <form action="" ngNativeValidate #form>
+        <label for="chk" aria-hidden="true" class="signLabel"> Sign up</label>
+        <div class="rinputs">
+          <!------------- UserName----------- -->
+          <div class="form-group mt-4">
+            <mat-form-field class="example-full-width">
+              <mat-label
+                ><i class="fa-solid fa-user text-dark me-2"></i>UserName
+              </mat-label>
+              <input
+                matInput
+                placeholder="Ex. Sankar"
+                name="UserName"
+                [(ngModel)]="runame1"
+                required=""
+              />
+            </mat-form-field>
+          </div>
+
+          <!------------- Email----------- -->
+          <div class="form-group">
+            <mat-form-field class="example-full-width">
+              <mat-label
+                ><i class="fa-solid fa-envelope text-dark me-2"></i
+                >Email</mat-label
+              >
+              <input
+                matInput
+                type="email"
+                placeholder="Ex. sankar@gmail.com"
+                name="email"
+                [(ngModel)]="remail1"
+                required=""
+              />
+            </mat-form-field>
+          </div>
+
+          <!------------- Password----------- -->
+          <div class="form-group">
+            <mat-form-field class="example-full-width">
+              <mat-label
+                ><i class="fa-solid fa-key text-dark me-2"></i
+                >Password</mat-label
+              >
+              <input
+                matInput
+                type="password"
+                placeholder="Ex. Sankar1234"
+                name="pw1"
+                [(ngModel)]="rpassword1"
+                required=""
+              />
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+              <mat-label
+                ><i class="fa-solid fa-key text-dark me-2"></i>Re Enter
+                Password</mat-label
+              >
+              <input
+                matInput
+                type="password"
+                placeholder="Ex. Sankar1234"
+                name="pw1"
+                [(ngModel)]="rpassword2"
+                required=""
+              />
+            </mat-form-field>
+          </div>
+
+          <div class="from-group">
+            <div *ngIf="rpassword1 != rpassword2">
+              <label for="" class="text-white bg-danger rounded" id="MisMatch">
+                Password MisMatched</label
+              >
+            </div>
+            <div *ngIf="rpassword1 == rpassword2">
+              <button
+                mat-raised-button
+                color="primary"
+                type="submit"
+                (click)="form.checkValidity() ? submit() : null"
+                id="submit"
+              >
+                Submit
+              </button>
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
+
+    <div class="login">
+      <form>
+        <label for="chk" aria-hidden="true">Login</label>
+
+        <!------------- UserName----------- -->
+        <div class="form-group LInputsAll">
+          <mat-form-field class="example-full-width">
+            <mat-label
+              ><i class="fa-solid fa-user text-dark me-2"></i>UserName
+            </mat-label>
+            <input
+              matInput
+              placeholder="Ex. Sankar"
+              name="UserName"
+              [(ngModel)]="Uname"
+              required=""
+            />
+          </mat-form-field>
+
+          <mat-form-field class="example-full-width">
+            <mat-label
+              ><i class="fa-solid fa-key text-dark me-2"></i>Password</mat-label
+            >
+            <input
+              matInput
+              type="password"
+              placeholder="Ex. Sankar1234"
+              name="pw1"
+              [(ngModel)]="password"
+              required=""
+            />
+          </mat-form-field>
+        </div>
+        <button class="button1" (click)="Login()">Login</button>
+      </form>
+    </div>
+  </div>
 </body>
